# DLADS-Distributed-Log-Based-Anomaly-Detector

./: .gitignore  CMakeLists.txt  README.md  alerts.db  alerts.db-journal  clean_demo.sh  demo_distributed.sh  test_pipeline.sh
config/: agent.yaml  rules.ini
dashboard/agent/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/agent/src/: App.tsx  index.css
dashboard/agent/src/components/: SevBadge.tsx  Sidebar.tsx
dashboard/agent/src/hooks/: useAlertHistory.ts  useApi.ts
dashboard/agent/src/pages/: Alerts.tsx  LiveFeed.tsx  NodeInfo.tsx  Stats.tsx
include/dlads/: alert_event.hpp  alert_publisher.hpp  alert_store.hpp  coordinator.hpp  correlation_engine.hpp  heartbeat.hpp  log_event.hpp  log_parser.hpp  log_simulator.hpp  log_tailer.hpp  node_registry.hpp  ring_buffer.hpp  rule_engine.hpp  suricata_adapter.hpp  suricata_parser.hpp  zscore_detector.hpp
src/: agent_main.cpp  alert_event.cpp  alert_publisher.cpp  coordinator.cpp  dashboard.cpp  demo_main.cpp  log_parser.cpp  log_simulator.cpp  log_tailer.cpp  rule_engine.cpp  subscriber.cpp  suricata_adapter.cpp  suricata_parser.cpp
tests/: attack.sh  demo.sh  dlads.sh  monitor.sh  real_attacks.sh  run_demo.sh  run_ids_comparison.sh  run_real_demo.sh  suricata_attacks.sh  test_alert_event.cpp  test_alert_publisher.cpp  test_log_tailer.cpp  test_ring_buffer.cpp  test_rule_engine.cpp  test_rule_engine_index.cpp  test_system.sh  test_zscore.cpp
